k8s-apps/utilities/pocket-id/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pocket-id
  namespace: pocket-id
  labels:
    app.kubernetes.io/name: pocket-id
    app.kubernetes.io/part-of: utilities
    app.kubernetes.io/managed-by: argocd
spec:
  selector:
    app.kubernetes.io/name: pocket-id
  ports:
    - port: 80
      targetPort: 1411
